--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ body {
 }
 
 .congrats-message {
-    font-size: 24px;
+    font-size: 5vw;
     font-weight: bold;
     text-align: center;
     opacity: 0;
@@ -151,7 +151,7 @@ body {
     transition: opacity 1s ease, transform 1s ease;
     color: #ff4081; /* Cute pink color */
     background: white;
-    padding: 10px 20px;
+    padding: 2vw 4vw;
     border-radius: 15px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
@@ -186,7 +186,9 @@ h1 {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    text-align: center;
     height: 100%;
     gap: 20px;
+    margin: 20px;
     margin-top: 20%;
 }
